[package]
name = "drogue-cloud-device-management-service"
version = "0.2.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2018"

[dependencies]
anyhow = "1"

async-trait = "0.1"

actix-web = "4.0.0-beta.1" # we need v4 as we need tokio 1
actix-cors = "0.6.0-beta.1"
actix-web-httpauth = "0.6.0-beta.1"

http = "0.2"

dotenv = "0.15"
envconfig = "0.9"
env_logger = "0.7"
log = "0.4"

serde = "1"
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
futures = "0.3"
rust-crypto = "0.2"
rand = "0.7"

chrono = { version = "0.4", features = ["serde"] }
pem = "0.8"
x509-parser = "0.9"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }

config = "0.10"

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }

[dev-dependencies]
actix-rt = "2.0.0-beta.2"
testcontainers = "0.12"
serial_test = "0.5"
drogue-cloud-test-common = { path = "../test-common" }
base64 = "0.13"