[package]
name = "drogue-cloud-device-management-service"
description = "Device management service"
version = "0.9.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"

async-trait = "0.1"

actix-cors = "=0.6.0-beta.8"
prometheus = { version = "^0.13", default-features = false }

http = "0.2"
url = "2"

dotenv = "0.15"
config = "0.11"
env_logger = "0.7"
log = "0.4"
thiserror = "1"

serde = "1"
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
futures = "0.3"
pin-project = "1"
rust-crypto = "0.2"
rand = "0.8"
uuid = "0.8"
bytes = "1"
hostname-validator = "1.1.0"

chrono = { version = "0.4", features = ["serde"] }
pem = "1"
x509-parser = "0.9"
reqwest = "0.11"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-admin-service = { path = "../admin-service"  }
drogue-cloud-access-token-service = { path = "../access-token-service" }

drogue-client = "0.9.0-alpha.1"

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }

[dev-dependencies]
actix-rt = "2.0.0-beta.2"
actix-http = "=3.0.0-beta.18"
testcontainers = "0.12"
serial_test = "0.5"
drogue-cloud-test-common = { path = "../test-common" }
base64 = "0.13"
openid = "0.9"
tokio = { version = "1", features = ["full"] }
maplit = "1"
form_urlencoded = "1"