[package]
name = "drogue-cloud-ditto-registry-operator"
description = "Eclipse Ditto registry operator"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

actix = "0.12"
async-std = "1"
async-trait = "0.1"
lazy_static = "1"
tokio = "1"
futures = "0.3"

anyhow = "1"
config = "0.11"
dotenv = "0.15"
env_logger = "0.7"
humantime = "2"
humantime-serde = "1"
log = "0.4"
thiserror = "1"

bcrypt = "0.9"
chrono = { version = "0.4", features = ["serde"] }
headers = "0.3"
http = "0.2"
indexmap = { version = "1", features = ["serde"] }
maplit = "1"
rand = "0.7"
reqwest = "0.11"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "1"
url = "2"
x509-parser = "0.9"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-operator-common = { path = "../operator-common", features = ["with_kube"] }

drogue-client = "0.9.0-alpha.1"
