[package]
name = "drogue-cloud-ditto-registry-operator"
description = "Eclipse Ditto registry operator"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix = "0.13"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
drogue-client = "0.11"
futures = "0.3"
http = "0.2"
humantime = "2"
humantime-serde = "1"
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1"
log = "0.4"
prometheus = { version = "^0.13", default-features = false }
rand = "0.8"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_with = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
url = "2"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-operator-common = { path = "../operator-common", features = ["with_kube"] }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

