[package]
name = "drogue-cloud-endpoint-common"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

actix-broker = "0.4.0"
actix-tls = { version = "^3.0.0", optional = true }
prometheus = { version = "^0.13", default-features = false }
lazy_static = "1.4.0"

reqwest = { version = "0.11", features = ["json"] }

anyhow = "1"
snafu = "0.6"
chrono = "0.4"

async-trait = "0.1"
async-std = "1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

headers = "0.3"
mime = "0.3"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "0.8", features = ["v4"] }

env_logger = "0.7"
log = "0.4"
config = "0.11"
thiserror = "1"

cloudevents-sdk = { version = "0.4", features = ["actix", "reqwest", "rdkafka"] }

rdkafka = { version = "0.25", features = ["ssl", "sasl"] }

percent-encoding = "2"
base64 = "0.13"
http = "0.2"

openid = "0.9"

drogue-cloud-service-api = { path = "../service-api", features = ["rdkafka"] }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-client = "0.9.0-alpha.1"

x509-parser = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-openssl = { version = "0.6", optional = true }
tokio-rustls = { version = "0.22", optional = true }

ntex = { version = "0.5", optional = true }

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"

[features]
default = ["rustls", "openssl"]
rustls = ["tokio-rustls"]
openssl = ["tokio-openssl", "ntex/openssl", "open-ssl"]