[package]
name = "drogue-cloud-endpoint-common"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

actix-broker = "0.4.0"
actix-tls = { version = "^3.0.0", optional = true }
anyhow = "1"
async-std = "1"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
cloudevents-sdk = { version = "0.4", features = ["actix", "reqwest", "rdkafka"] }
config = "0.12"
env_logger = "0.9"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
headers = "0.3"
http = "0.2"
lazy_static = "1.4.0"
log = "0.4"
mime = "0.3"
openid = "0.9"
percent-encoding = "2"
prometheus = { version = "^0.13", default-features = false }
rand = "0.8"
rdkafka = { version = "0.28", features = ["ssl", "sasl"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.6"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }
x509-parser = "0.9"

ntex = { version = "0.5", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-rustls = { version = "0.22", optional = true }

drogue-cloud-service-api = { path = "../service-api", features = ["rdkafka"] }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-client = "0.9.0-alpha.1"

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"

[features]
default = ["rustls", "openssl"]
rustls = ["tokio-rustls"]
openssl = ["tokio-openssl", "ntex/openssl", "open-ssl"]