[package]
name = "drogue-cloud-endpoint-common"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-tls = { version = "^3.0.0", optional = true }
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
cloudevents-sdk = { version = "0.6", features = ["actix", "reqwest", "rdkafka"] }
drogue-client = "0.12"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
lazy_static = "1.4.0"
log = "0.4"
lru = "0.8"
mime = "0.3"
mqtt-protocol = { version = "0.11", default-features = false }
openid = "0.10"
percent-encoding = "2"
prometheus = { version = "^0.13", default-features = false }
rand = "0.8"
rdkafka = { version = "0.29", features = ["ssl", "sasl"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
x509-parser = "0.14"

ntex = { version = "0.5", optional = true }
ntex-tls = { version = "0.1.7", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-dtls-stream-sink = { version = "0.6", optional = true }

drogue-cloud-service-api = { path = "../service-api", features = ["rdkafka"] }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-event-common = { path = "../event-common" }

[dev-dependencies]
env_logger = "0.9"

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"

[features]
default = ["rustls", "openssl"]
rustls = ["tokio-rustls"]
openssl = ["tokio-openssl", "ntex-tls", "ntex/openssl", "open-ssl", "tokio-dtls-stream-sink"]
