[package]
name = "drogue-cloud-event-common"
version = "0.10.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cloudevents-sdk = { version = "0.5", features = ["rdkafka"] }
futures = "0.3"
log = "0.4"
owning_ref = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

drogue-cloud-service-api = { path = "../service-api" }

[dependencies.rdkafka]
version = "0.28"
features = ["ssl", "sasl"]

[dev-dependencies]
config = "0.13"
url = "2"
