[package]
name = "drogue-cloud-http-endpoint"
description = "HTTP endpoint"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>", "Dejan Bosanac <dbosanac@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

anyhow = "1"
snafu = "0.6"
async-trait = "0.1"

actix-rt = "2"
actix-tls = "^3.0.0"
prometheus = { version = "^0.13", default-features = false }

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "0.8", features = ["v4"] }
percent-encoding = "2"
http = "0.2"

env_logger = "0.7"
log = "0.4"

cloudevents-sdk = { version = "0.4", features = ["actix"] }

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

drogue-client = "0.9.0-alpha.1"
drogue-ttn = "0.5"

dotenv = "0.15.0"
config = "0.11"
mime = "0.3"

tokio = { version = "1", features = ["full"] }

openid = "0.9"

chrono = "0.4"

[dependencies.rust-tls]
version = "0.20"
package = "rustls"

[dependencies.open-ssl]
version = "0.10"
package = "openssl"
features = ["v111"]

[features]
default = ["openssl"]
openssl = ["drogue-cloud-service-api/openssl"]
rustls = ["drogue-cloud-service-api/rustls"]
