[package]
name = "drogue-cloud-http-endpoint"
description = "HTTP endpoint"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>", "Dejan Bosanac <dbosanac@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

actix-rt = "2"
actix-tls = "^3.0.0"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
cloudevents-sdk = { version = "0.4", features = ["actix"] }
config = "0.11"
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
log = "0.4"
mime = "0.3"
openid = "0.9"
percent-encoding = "2"
prometheus = { version = "^0.13", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

drogue-client = "0.9.0-alpha.1"
drogue-ttn = "0.5"

[dependencies.rust-tls]
version = "0.20"
package = "rustls"

[dependencies.open-ssl]
version = "0.10"
package = "openssl"
features = ["v111"]

[features]
default = ["openssl", "jaeger"]
openssl = ["drogue-cloud-service-api/openssl"]
rustls = ["drogue-cloud-service-api/rustls"]
jaeger = ["drogue-cloud-service-common/jaeger"]