[package]
name = "influxdb-pusher"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]

anyhow = "1"

actix-rt = "1.1"
actix-service = "1"
actix-web = "2"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

chrono = "0.4"
influxdb = { version = "0.1", features = ["derive", "use-serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.7"
log = "0.4"

cloudevents-sdk = "0.2"
cloudevents-sdk-actix-web = "0.2"
cloudevents-sdk-reqwest = "0.2"
