[package]
name = "influxdb-pusher"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]

anyhow = "1"

actix-rt = "1.1"
actix-service = "1"
actix-web = "3"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

envconfig = "0.9"

chrono = "0.4"
influxdb = { version = "0.3", features = ["derive", "use-serde"] }
jsonpath_lib = "0.2"
snafu = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.7"
log = "0.4"

cloudevents-sdk = "0.3"
cloudevents-sdk-actix-web = "0.3"
cloudevents-sdk-reqwest = "0.3"
