[package]
name = "drogue-cloud-integration-common"
version = "0.6.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]

async-trait = "0.1"
log = "0.4"
thiserror = "1"

futures = "0.3"
bytes = "1.0.1"

tokio-stream = { version = "0.1", features = ["time"] }

cloudevents-sdk = { version = "0.4", features = ["rdkafka"] }

serde = "1"
serde_json = { version = "1" }

owning_ref = "0.4"
reqwest = "0.11"
url = "2"
base64 = "0.13"

uuid = { version = "0.8", features = ["v4"] }

drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common" }

drogue-client = "0.6.0"

actix = { version = "0.11.0", optional = true }
actix-http = { version = "=3.0.0-beta.5", optional = true }
actix-web = { version = "=4.0.0-beta.5", optional = true } # we need v4 as we need tokio 1

[dependencies.rdkafka]
version = "0.25"
features = ["ssl", "sasl"]

[features]
with_actix = ["actix", "actix-http", "actix-web"]
