[package]
name = "drogue-cloud-integration-common"
version = "0.8.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

async-trait = "0.1"
log = "0.4"
thiserror = "1"

futures = "0.3"
bytes = "1.0.1"

tokio-stream = { version = "0.1", features = ["time"] }

cloudevents-sdk = { version = "0.4", features = ["rdkafka"] }

serde = "1"
serde_json = { version = "1" }

reqwest = "0.11"
url = "2"
base64 = "0.13"

drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-event-common = { path = "../event-common" }

drogue-client = "0.7.1"

actix-web = { version = "=4.0.0-beta.8", optional = true } # we need v4 as we need tokio 1

[dependencies.rdkafka]
version = "0.25"
features = ["ssl", "sasl"]

[features]
with_actix = ["actix-web"]
