[package]
name = "drogue-cloud-integration-common"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0.1"
cloudevents-sdk = { version = "0.6", features = ["rdkafka"] }
drogue-client = "0.11.0-alpha.1"
futures = "0.3"
log = "0.4"
reqwest = "0.11"
serde = "1"
serde_json = { version = "1" }
thiserror = "1"
tokio-stream = { version = "0.1", features = ["time"] }
url = "2"

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dependencies.rdkafka]
version = "0.29"
features = ["ssl", "sasl"]
