[package]
name = "drogue-cloud-mqtt-common"
version = "0.8.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
log = "0.4"

async-trait = "0.1"
futures = "0.3"

ntex = "0.4"
ntex-mqtt = "0.7"
ntex-service = "0.2"

pem = "1"
serde = "1"
humantime-serde = "1"

drogue-cloud-endpoint-common = { path = "../endpoint-common" }

[dependencies.rust-tls]
version = "0.19"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[features]
default = ["rustls"]
rustls = ["rust-tls", "ntex/rustls"]