[package]
name = "drogue-cloud-mqtt-common"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1"

async-trait = "0.1"
futures = "0.3"

ntex = { version = "0.5", features = ["tokio"] }
ntex-mqtt = "0.8"
ntex-service = "0.3"

pem = "1"
serde = "1"
humantime-serde = "1"

drogue-cloud-endpoint-common = { path = "../endpoint-common" }

rustls-pemfile = { version = "0.2", optional = true }

[dependencies.rust-tls]
version = "0.20"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"

[features]
default = ["openssl"]
rustls = ["rust-tls", "ntex/rustls", "rustls-pemfile"]
openssl = ["open-ssl", "ntex/openssl", "rustls-pemfile"]