[package]
name = "drogue-cloud-mqtt-common"
version = "0.10.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
humantime-serde = "1"
log = "0.4"
ntex = { version = "0.5", features = ["tokio"] }
ntex-mqtt = "0.8"
ntex-service = "0.3"
pem = "1"
serde = "1"
thiserror = "1"

rustls-pemfile = { version = "1", optional = true }

drogue-cloud-endpoint-common = { path = "../endpoint-common" }

[dependencies.rust-tls]
version = "0.20"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"

[features]
default = ["openssl"]
rustls = ["rust-tls", "ntex/rustls", "rustls-pemfile"]
openssl = ["open-ssl", "ntex/openssl", "rustls-pemfile"]