[package]
name = "drogue-cloud-mqtt-endpoint"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]

anyhow = "1"
async-trait = "0.1.42"

ntex = "0.1.23"
ntex-rt = "0.1.1"
ntex-service = "0.1.3"
ntex-mqtt = "0.3.8"
bytes = "0.5"
bytestring = "0.1"
http = "0.2.1"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

tokio = { version = "1", features = ["full"] }

reqwest = "0.10"
lazy_static = "1.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "0.8", features = ["v4"] }

env_logger = "0.7"
dotenv = "0.15"
log = "0.4"
envconfig = "0.9"

cloudevents-sdk = "0.3"

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

webpki = "0.21"

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"

[dependencies.rust-tls]
version = "0.19"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[features]
default = ["rustls"]
openssl = ["open-ssl", "ntex/openssl"]
rustls = ["rust-tls", "ntex/rustls"]
