[package]
name = "drogue-cloud-mqtt-endpoint"
description = "MQTT endpoint"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

anyhow = "1"
async-trait = "0.1.42"
clru = "0.5"

ntex = "0.5"
ntex-rt = "0.4"
ntex-service = "0.3"
ntex-mqtt = "0.8"
prometheus = { version = "^0.13", default-features = false }
tracing = "0.1"

bytes = "1"
bytestring = "1"
http = "0.2.1"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

tokio = { version = "1", features = ["full"] }

reqwest = "0.11"
lazy_static = "1.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"

uuid = { version = "0.8", features = ["v4"] }

env_logger = "0.9"
dotenv = "0.15"
log = "0.4"

webpki = "0.21"

cloudevents-sdk = "0.4"

drogue-cloud-mqtt-common = { path = "../mqtt-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common", features = ["ntex"] }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common", features = ["jaeger"] }
drogue-client = "0.9.0-alpha.1"

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"
features = ["v111"]

[dependencies.rust-tls]
version = "0.20"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[features]
default = ["openssl"]
openssl = ["open-ssl", "ntex/openssl"]
rustls = ["rust-tls", "ntex/rustls"]
jaeger = ["drogue-cloud-service-common/jaeger"]