[package]
name = "drogue-cloud-mqtt-endpoint"
description = "MQTT endpoint"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bytes = "1"
bytestring = "1"
chrono = "0.4"
cloudevents-sdk = "0.6"
clru = "0.6"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2.1"
humantime-serde = "1"
lazy_static = "1.4.0"
log = "0.4"
ntex = { version = "0.5", features = ["tokio"] }
ntex-mqtt = "0.9"
ntex-tls = "0.1.7"
ntex-rt = "0.4"
ntex-service = "0.3"
prometheus = { version = "^0.13", default-features = false }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log-always"] }
uuid = { version = "1", features = ["v4"] }
webpki = "0.22"

drogue-cloud-mqtt-common = { path = "../mqtt-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common", features = ["ntex"] }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-client = "0.12"

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"
features = ["v111"]

[dependencies.rust-tls]
version = "0.20"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[features]
default = ["openssl"]
openssl = ["open-ssl", "ntex/openssl"]
rustls = ["rust-tls", "ntex/rustls", "drogue-cloud-mqtt-common/rustls"]
