[package]
name = "drogue-cloud-mqtt-integration"
description = "MQTT integration"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bytes = "1"
bytestring = "1"
cloudevents-sdk = "0.6"
drogue-client = "0.11.0-alpha.2"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2.1"
lazy_static = "1.4.0"
log = "0.4"
mime = "0.3"
ntex = "0.5"
ntex-bytes = "0.1"
ntex-mqtt = "0.9"
ntex-rt = "0.4"
ntex-service = "0.3"
openid = "0.10"
prometheus = { version = "^0.13", default-features = false }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
webpki = "0.22"

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-integration-common = { path = "../integration-common" }
drogue-cloud-mqtt-common = { path = "../mqtt-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dependencies.open-ssl]
version = "0.10"
optional = true
package = "openssl"
features = ["v111"]

[dependencies.rust-tls]
version = "0.20"
optional = true
package = "rustls"
# "dangerous" is required in order to implement ther ClientCertVerified trait
# see: https://github.com/ctz/rustls/issues/467
features = ["dangerous_configuration"]

[features]
default = ["openssl"]
openssl = ["open-ssl", "ntex/openssl"]
rustls = ["rust-tls", "ntex/rustls"]
