[package]
name = "drogue-cloud-operator-common"
version = "0.6.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
log = "0.4"
thiserror = "1"
anyhow = "1"

serde = { version = "1" }
serde_json = { version = "1" }
reqwest = { version = "0.11", optional = true }
kube = { version = "0.58", optional = true }
kube-runtime = { version = "0.58", optional = true }
async-std = "1.9.0"
futures = "0.3"
tokio = "1"
chrono = "0.4"

drogue-client = "0.7"
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-database-common = { path = "../database-common" }

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"] }

[features]
with_kube = ["kube", "kube-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"