[package]
name = "drogue-cloud-operator-common"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
log = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"

serde = { version = "1" }
serde_json = { version = "1" }
reqwest = { version = "0.11" }
kube = { version = "0.68", optional = true }
kube-runtime = { version = "0.68", optional = true }
async-std = "1.9.0"
futures = "0.3"
tokio = "1"
chrono = "0.4"

drogue-client = "0.10"
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-database-common = { path = "../database-common" }

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"] }

[features]
with_kube = ["kube", "kube-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
drogue-cloud-test-common = { path = "../test-common" }
env_logger = "0.9"
actix-rt = "2"
actix-service = "2"
testcontainers = "0.12"
serial_test = "0.5"
