[package]
name = "drogue-cloud-operator-common"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
deadpool-postgres = { version = "0.10", features = ["serde", "rt_tokio_1"] }
drogue-client = "0.10"
futures = "0.3"
kube = { version = "0.68", optional = true }
kube-runtime = { version = "0.68", optional = true }
log = "0.4"
reqwest = { version = "0.11" }
serde = { version = "1" }
serde_json = { version = "1" }
thiserror = "1"
tokio = "1"
#tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
tracing = "0.1"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-service-api = { path = "../service-api" }

[features]
with_kube = ["kube", "kube-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
drogue-cloud-test-common = { path = "../test-common" }
env_logger = "0.9"
actix-rt = "2"
actix-service = "2"
testcontainers = "0.12"
serial_test = "0.6"
