[package]
name = "drogue-cloud-outbox-controller"
version = "0.6.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

[dependencies]
anyhow = "1"

async-trait = "0.1"

actix-web = "=4.0.0-beta.8" # we need v4 as we need tokio 1
actix = "0.12"

cloudevents-sdk = { version = "0.4", features = ["actix"] }

http = "0.2"
url = "2"

dotenv = "0.15"
humantime = "2"
humantime-serde = "1"
config = "0.10"

thiserror = "1"

env_logger = "0.7"
log = "0.4"

serde = "1"
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
futures = "0.3"
rust-crypto = "0.2"
rand = "0.7"

chrono = { version = "0.4", features = ["serde"] }
pem = "0.8"
x509-parser = "0.9"
reqwest = "0.11"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-registry-events = { path = "../registry-events" }

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }
