[package]
name = "drogue-cloud-outbox-controller"
description = "Outbox controller"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"

actix = "0.12"
async-trait = "0.1"
futures = "0.3"

dotenv = "0.15"
humantime = "2"
humantime-serde = "1"
config = "0.11"
thiserror = "1"
env_logger = "0.9"
log = "0.4"

serde = "1"
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
prometheus = { version = "^0.13", default-features = false }

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-registry-events = { path = "../registry-events" }

